--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <div id="wrapper">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#/about">About</a></li>
-            </ul>
-            <h1>This text should be replaced!</h1>
-        </div>
+        <div id="wrapper"></div>
 
         <script data-main="js/app/main" src="js/vendor/requirejs/require.js"></script>
 
