bugfixes & new audio files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Asteroids Crusher</title>
     <meta name="description" content="">
     <meta name="viewport" content=" width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
-    <link rel="stylesheet" type="text/css" href="css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="dist/main.min.css">
     <script type="text/javascript">
     WebFontConfig = {
         google: {
