--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <div id="orientation"></div>
 
     <div id="joystick-wrapper">
-        <img id="joystick" src="images/hud/control_stick.png">
+        <img id="joystick" src="dist/images/hud/control_stick.png">
     </div>
 
-    <script data-main="js/app" src="bower_components/requirejs/require.js"></script>
+    <script data-main="dist/built" src="dist/require.min.js"></script>
 
 </body>
 
